--- a/gry.sample.scorer2/src/main/resources/public/index.html
+++ b/gry.sample.scorer2/src/main/resources/public/index.html
@@ -1,19 +1,90 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Tennis Match Scoreboard</title>
-    <script src="js/main.js" type="application/javascript"></script>
-    <script src="js/axios/dist/axios.min.js"></script>
-    <link rel="Stylesheet" href="css/main.css" type="text/css" />
-</head>
-<body>
-    <h1 id="title">Tennis Match Scoreboard</h1>
-    <div id="score">Match not yet started!</div>
-    <div id="buttoncontainer">
-        <button class="button" onclick="startMatch();">Start Match</button>
-        <button class="scorebutton" onclick="score('A');">Score A</button>
-        <button class="scorebutton" onclick="score('B');">Score B</button>
-    </div>
-</body>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <title>Tennis Match Scoreboard</title>
+        <script src="js/main.js" type="application/javascript"></script>
+        <script src="js/axios/dist/axios.min.js"></script>
+        <script src="js/jquery/jquery-3.3.1.slim.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    </head>
+    <body class="bg-light" style="font-size: 2rem">
+        <div class="container jumbotron">
+            <h1 id="title">Tennis Match Scoreboard</h1>
+        </div>
+
+        <div class="container bg-warning text-right p-5 mb-5">
+            <div class="row text-left mr-2" style="font-size: 1.5rem">
+                <div class="col-4">Player</div>
+                <div class="col">Set 1</div>
+                <div class="col">Set 2</div>
+                <div class="col">Set 3</div>
+                <div class="col">Set 4</div>
+                <div class="col">Set 5</div>
+                <div id="scoreUnitLabel" class="col-2">Game</div>
+            </div>
+            <div class="row bg-success mr-2">
+                <div class="col-4 text-left bg-warning">
+                    <button id="score-btn-a" class="btn-lg btn-primary w-75" disabled onclick="score('A');">____</button>
+                </div>
+                <div id="set1-score-a" class="col border"></div>
+                <div id="set2-score-a" class="col border"></div>
+                <div id="set3-score-a" class="col border"></div>
+                <div id="set4-score-a" class="col border"></div>
+                <div id="set5-score-a"  class="col border"></div>
+                <div id="current-game-score-a" class="col-2 border"></div>
+            </div>
+            <div class="row bg-success mr-2">
+                <div class="col-4 text-left bg-warning">
+                    <button id="score-btn-b" class="btn-lg btn-primary w-75" disabled onclick="score('B');">____</button>
+                </div>
+                <div id="set1-score-b" class="col border"></div>
+                <div id="set2-score-b" class="col border"></div>
+                <div id="set3-score-b" class="col border"></div>
+                <div id="set4-score-b" class="col border"></div>
+                <div id="set5-score-b" class="col border"></div>
+                <div id="current-game-score-b" class="col-2 border"></div>
+            </div>
+            <div class="row text-right bg-warning mr-2" style="font-size: 1.5rem">
+                <div class="col-4"></div>
+                <div id="status-set1" class="col"></div>
+                <div id="status-set2" class="col"></div>
+                <div id="status-set3" class="col"></div>
+                <div id="status-set4" class="col"></div>
+                <div id="status-set5" class="col"></div>
+                <div id="status-game" class="col-2"></div>
+            </div>
+            <div class="row text-left">
+                <div class="col-4 btn-group-sm" data-toggle="buttons">
+                    <label class="btn btn-sm">
+                        <input type="radio" name="match-mode" value="best-of-3" autocomplete="off" checked> Best Of 3
+                    </label>
+                    <label class="btn btn-sm">
+                        <input type="radio" name="match-mode" value="best-of-5" autocomplete="off"> Best Of 5
+                    </label>
+                </div>
+                <div class="col btn-group-sm" data-toggle="buttons">
+                    <label class="btn btn-sm">
+                        <input type="radio" name="tiebreak-mode" value="in-all-sets" autocomplete="off"> In All Sets
+                    </label>
+                    <label class="btn btn-sm">
+                        <input type="radio" name="tiebreak-mode" value="in-no-set" autocomplete="off"> In NO Sets
+                    </label>
+                    <label class="btn btn-sm">
+                        <input type="radio" name="tiebreak-mode" value="all-but-last-set" autocomplete="off" checked> In All But Last Set
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        <div class="container jumbotron">
+            <div class="row text-left">
+                <button class="btn-lg btn-primary" onclick="startMatch();">Start Match</button>
+            </div>
+        </div>
+    </body>
 </html>
