--- a/gry.sample.scorer2/src/main/resources/public/index.html
+++ b/gry.sample.scorer2/src/main/resources/public/index.html
@@ -12,14 +12,15 @@
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     </head>
-    <body class="bg-light">
+    <body class="bg-light" onload="majorReset()">
         <div class="container jumbotron">
             <h1>Tennis Match Scoreboard</h1>
         </div>
 
-        <div class="container border-dark bg-warning text-right p-5 mb-5" id="score-board" hidden>
+        <div class="container border-dark bg-warning text-right p-5 mb-5" id="score-board">
             <div class="row text-left mr-2">
-                <div class="col-4">Player</div>
+                <div class="col-3">Player</div>
+                <div class="col-1"></div>
                 <div class="col">Set 1</div>
                 <div class="col">Set 2</div>
                 <div class="col">Set 3</div>
@@ -28,9 +29,10 @@
                 <div id="scoreUnitLabel" class="col-2">Game</div>
             </div>
             <div class="row bg-success mr-2" style="font-size: 2rem">
-                <div class="col-4 text-left bg-warning">
-                    <button id="score-btn-a" class="btn-lg btn-primary w-75" onclick="score('A');">Player A</button>
+                <div class="col-3 text-left bg-warning">
+                    <button id="score-btn-a" class="btn-lg btn-info w-100" onclick="score('A');">Player A</button>
                 </div>
+                <div id="player-a-status" class="col-1 bg-warning text-left"></div>
                 <div id="set1-score-a" class="col border"></div>
                 <div id="set2-score-a" class="col border"></div>
                 <div id="set3-score-a" class="col border"></div>
@@ -39,9 +41,10 @@
                 <div id="current-game-score-a" class="col-2 border"></div>
             </div>
             <div class="row bg-success mr-2" style="font-size: 2rem">
-                <div class="col-4 text-left bg-warning">
-                    <button id="score-btn-b" class="btn-lg btn-primary w-75" onclick="score('B');">Player B</button>
+                <div class="col-3 text-left bg-warning">
+                    <button id="score-btn-b" class="btn-lg btn-info w-100" onclick="score('B');">Player B</button>
                 </div>
+                <div id="player-b-status" class="col-1 bg-warning text-left"></div>
                 <div id="set1-score-b" class="col border"></div>
                 <div id="set2-score-b" class="col border"></div>
                 <div id="set3-score-b" class="col border"></div>
@@ -50,13 +53,17 @@
                 <div id="current-game-score-b" class="col-2 border"></div>
             </div>
             <div class="row text-right bg-warning mr-2">
-                <div class="col-4"></div>
+                <div class="col-3"></div>
+                <div class="col-1"></div>
                 <div id="status-set1" class="col"></div>
                 <div id="status-set2" class="col"></div>
                 <div id="status-set3" class="col"></div>
                 <div id="status-set4" class="col"></div>
                 <div id="status-set5" class="col"></div>
                 <div id="status-game" class="col-2"></div>
+            </div>
+            <div class="row text-xl-center bg-danger mr-2 mt-4 mb-1 ml-1 p-4" id="match-status-bar">
+                <div class="col" id="match-status-text" style="font-size: 1.5rem"></div>
             </div>
         </div>
 
@@ -101,9 +108,9 @@
             </p>
         </div>
 
-        <div class="container jumbotron" id="terminate-bar" hidden>
-            <button class="btn-primary btn-lg" onclick="startMatch()">Reset Match</button>
-            <button class="btn-secondary btn-lg" onclick="startNewMatch()">New Match</button>
+        <div class="container jumbotron" id="terminate-bar">
+            <button class="btn btn-lg btn-secondary" onclick="startMatch()">Reset Match</button>
+            <button class="btn btn-lg btn-link" onclick="startNewMatch()">New Match</button>
         </div>
 
     </body>
