--- a/gry.sample.scorer2/src/main/resources/public/index.html
+++ b/gry.sample.scorer2/src/main/resources/public/index.html
@@ -30,6 +30,15 @@
                 color: antiquewhite;
                 font-weight: bold;
             }
+            .bg-score {
+                background-color: darkgreen;
+            }
+            .bg-score-game {
+                background-color: green;
+            }
+            .bg-score-board {
+                background-color: wheat;
+            }
         </style>
     </head>
     <body class="bg-light" onload="majorReset()">
@@ -37,10 +46,9 @@
             <h1>Tennis Match Scoreboard</h1>
         </div>
 
-        <div class="container border-dark bg-warning text-right p-5 mb-5" id="score-board">
+        <div class="container border-dark bg-score-board text-right p-5 mb-5" id="score-board">
             <div class="row text-left mr-2">
                 <div class="col-3">Player</div>
-                <div class="col-1"></div>
                 <div class="col">Set 1</div>
                 <div class="col">Set 2</div>
                 <div class="col">Set 3</div>
@@ -48,42 +56,36 @@
                 <div class="col">Set 5</div>
                 <div id="scoreUnitLabel" class="col-3">Game</div>
             </div>
-            <div class="row bg-success mr-2" style="font-size: 2rem;">
-                <div class="col-3 text-left bg-warning">
+            <div class="row bg-score mr-2" style="font-size: 2rem;">
+                <div class="col-3 text-left bg-score-board">
                     <button id="score-btn-a" class="btn-lg btn-info w-100" onclick="score('A');">Player A</button>
                 </div>
-                <div id="player-a-status" class="col-1 bg-warning text-left"></div>
                 <div id="set1-score-a" class="col border seg-14"></div>
                 <div id="set2-score-a" class="col border seg-14"></div>
                 <div id="set3-score-a" class="col border seg-14"></div>
                 <div id="set4-score-a" class="col border seg-14"></div>
                 <div id="set5-score-a"  class="col border seg-14"></div>
-                <div id="current-game-score-a" class="col-3 border seg-14"></div>
+                <div id="current-game-score-a" class="col-3 bg-score-game border seg-14"></div>
             </div>
-            <div class="row bg-success mr-2" style="font-size: 2rem">
-                <div class="col-3 text-left bg-warning">
+            <div class="row bg-score mr-2" style="font-size: 2rem">
+                <div class="col-3 text-left bg-score-board">
                     <button id="score-btn-b" class="btn-lg btn-info w-100" onclick="score('B');">Player B</button>
                 </div>
-                <div id="player-b-status" class="col-1 bg-warning text-left"></div>
                 <div id="set1-score-b" class="col border seg-14"></div>
                 <div id="set2-score-b" class="col border seg-14"></div>
                 <div id="set3-score-b" class="col border seg-14"></div>
                 <div id="set4-score-b" class="col border seg-14"></div>
                 <div id="set5-score-b" class="col border seg-14"></div>
-                <div id="current-game-score-b" class="col-3 border seg-14"></div>
+                <div id="current-game-score-b" class="col-3 bg-score-game border seg-14"></div>
             </div>
-            <div class="row text-right bg-warning mr-2">
+            <div class="row text-right bg-score-board mr-2">
                 <div class="col-3"></div>
-                <div class="col-1"></div>
                 <div id="status-set1" class="col"></div>
                 <div id="status-set2" class="col"></div>
                 <div id="status-set3" class="col"></div>
                 <div id="status-set4" class="col"></div>
                 <div id="status-set5" class="col"></div>
                 <div id="status-game" class="col-3"></div>
-            </div>
-            <div class="row text-xl-center bg-info mr-2 mt-4 mb-1 ml-1 p-4" id="match-status-bar">
-                <div class="col" id="match-status-text" style="font-size: 1.5rem"></div>
             </div>
         </div>
 
