generalize api url access to be deployment independtent.

--- a/gry.sample.scorer2/src/main/resources/public/index.html
+++ b/gry.sample.scorer2/src/main/resources/public/index.html
@@ -41,7 +41,7 @@
             }
         </style>
     </head>
-    <body class="bg-light" onload="majorReset()">
+    <body class="bg-light" onload="onPageLoad()">
         <div class="container jumbotron">
             <h1>Tennis Match Scoreboard</h1>
         </div>
