refactor client sources -> to url '/tennis-score..'

--- a/gry.sample.scorer2/src/main/resources/public/tennis-score/board.html
+++ b/gry.sample.scorer2/src/main/resources/public/tennis-score/board.html
@@ -58,7 +58,7 @@
             </div>
             <div class="row bg-score mr-2" style="font-size: 2rem;">
                 <div class="col-3 pt-2 pb-2 text-left bg-score-board">
-                    <button id="score-btn-a" class="btn-lg btn-info w-100" onclick="score('A');">Player A</button>
+                    <button id="score-btn-a" class="btn-lg btn-info w-100" disabled=true onclick="score('A');">Player A</button>
                 </div>
                 <div id="set1-score-a" class="col pt-2 pb-2 border seg-14"></div>
                 <div id="set2-score-a" class="col pt-2 pb-2 border seg-14"></div>
@@ -69,7 +69,7 @@
             </div>
             <div class="row bg-score mr-2" style="font-size: 2rem">
                 <div class="col-3 pt-2 pb-2 text-left bg-score-board">
-                    <button id="score-btn-b" class="btn-lg btn-info w-100" onclick="score('B');">Player B</button>
+                    <button id="score-btn-b" class="btn-lg btn-info w-100" disabled=true onclick="score('B');">Player B</button>
                 </div>
                 <div id="set1-score-b" class="col pt-2 pb-2 border seg-14"></div>
                 <div id="set2-score-b" class="col pt-2 pb-2 border seg-14"></div>
